main.css
@font-face {
    src: url(assets/fonts/Lato-Regular.ttf);
    font-family: lato, sans-serif;
}

body {
    overflow-y: hidden;
    overflow-x: hidden;
    background-color: #78A6B2;
    background-repeat: no-repeat;
    background-size: cover;
}

img {
    transition: all .2s;
}

h1 {
    font-family: lato, sans-serif;
    text-align: left;
    font-size: 4.5em;
    color: #efefef;
    line-height: 1em;
}

h2 {
    font-family: lato, sans-serif;
    text-align: left;
    color: #efefef;
    line-height: 1.5em;
    margin-top: -2em;
    margin-bottom: 1.5em;
}

.cover {
    display: block;
    position: absolute;
    margin-left: 580px;
    margin-top: -220px;
    animation: slideinfrombot 0.5s ease, slideoutfromright 0.4s ease;
    animation-delay: 0s, 0.8s;
    animation-fill-mode: forwards;
    z-index: 1;
}

.logo {
    opacity: 0;
    animation: opaqueslide 0.4s ease;
    animation-delay: 0.9s;
    animation-fill-mode: forwards;
    z-index: 0;
    justify-self: end;
    align-self: center;
}


ul {
    list-style: none;
    margin: 0em;
    padding: 0em 0.5em;
}

ul li a {
    display: flex;
    align-items: center;
    justify-content:flex-start;
    font-family: lato, sans-serif;
    color: #efefef;
    text-align: left;
    line-height: 3em;
    text-decoration: none;
    text-wrap: nowrap;
    white-space: nowrap;
}

ul li a:hover {
    color:#f26524;
    transition: 0.2s;
}

ul li img {
    margin-right: 1em;
}

.card {
    background-color: #00514f;
    width: fit-content;
    height: auto;
    padding: 1em 4em 4em 3em;
    margin: 1em;
    border-radius: 1em;
    box-shadow: 10px 10px #f26524;
    opacity: 0;
    animation: opaque 0.5s ease;
    animation-delay: 0.8s;
    animation-fill-mode: forwards;
}

.grid {
    display: grid;
    width: 100%;
    height: auto;
    grid-template-columns: 1fr 1fr;
    margin: 10em auto;
}

.imgwrap {
    position: relative;
}

.webout {
    position: absolute;
}

.webover {
    opacity: 0;
    transition: opacity 0.2s ease;
}

.imgwrap:hover .webover {
    opacity: 1;
    z-index: 1;
}

.imgwrap:hover .webout {
    opacity: 0;
}

@keyframes slideinfrombot {
	0% {
		transform: translateY(50%);
		opacity: 0;
	}
	100% {
		transform: translateX(0);
		opacity: 1;
	}
}
@keyframes slideoutfromright {
	0% {
		transform: translateY(0);
		opacity: 1;
	}
	100% {
		transform: translateX(-20%);
		opacity: 0;
	}
}

@keyframes opaqueslide {
	0% {
		transform: translateX(0);
		opacity: 0;
	}
	100% {
		transform: translateX(-70%);
		opacity: 1;
	}
}

@keyframes opaque {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@media only screen and (max-width: 768px) {

body {
    overflow: scroll;
}

.grid {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 1em auto;
}

.logo {
    animation: none;
    opacity: 1;
}

.cover {
    display: none;
}

.card {
    width: 65vw;
}

}

